@startuml

title __PAYMENT's Class Diagram__\n

  package business {
    package business.payment {
      class BonusPayment {
          + getPaymentName()
          + setNetEmployeeSalary()
          + setGrossEmploymentCost()
          + getNetEmployeeSalary()
          + getGrossEmploymentCost()
          + setNetEmploymentCost()
          + setGrossEmployeeSalary()
          + getNetEmploymentCost()
          + getGrossEmployeeSalary()
      }
    }
  }
  

  package business {
    package business.payment {
      interface PaymentStrategy {
          {abstract} + getPaymentName()
          {abstract} + setNetEmployeeSalary()
          {abstract} + setGrossEmploymentCost()
          {abstract} + getNetEmployeeSalary()
          {abstract} + getGrossEmploymentCost()
          {abstract} + setNetEmploymentCost()
          {abstract} + setGrossEmployeeSalary()
          {abstract} + getNetEmploymentCost()
          {abstract} + getGrossEmployeeSalary()
      }
    }
  }
  

  package business {
    package business.payment {
      class StandardPayment {
          + getPaymentName()
          + setNetEmployeeSalary()
          + setGrossEmploymentCost()
          + getNetEmployeeSalary()
          + getGrossEmploymentCost()
          + setNetEmploymentCost()
          + setGrossEmployeeSalary()
          + getNetEmploymentCost()
          + getGrossEmployeeSalary()
      }
    }
  }
  

  package business {
    package business.payment {
      class TestPeriodPayment {
          + getPaymentName()
          + setNetEmployeeSalary()
          + setGrossEmploymentCost()
          + getNetEmployeeSalary()
          + getGrossEmploymentCost()
          + setNetEmploymentCost()
          + setGrossEmployeeSalary()
          + getNetEmploymentCost()
          + getGrossEmployeeSalary()
      }
    }
  }
  

  BonusPayment -up-|> PaymentStrategy
  BonusPayment o-- Money : netEmploymentCost
  BonusPayment o-- Tax : pensionTax
  BonusPayment o-- Tax : assurances
  BonusPayment o-- Tax : testPeriod
  StandardPayment -up-|> PaymentStrategy
  StandardPayment o-- Money : netEmploymentCost
  StandardPayment o-- Tax : pensionTax
  StandardPayment o-- Tax : assurances
  TestPeriodPayment -up-|> PaymentStrategy
  TestPeriodPayment o-- Money : netEmploymentCost
  TestPeriodPayment o-- Tax : pensionTax
  TestPeriodPayment o-- Tax : assurances
  TestPeriodPayment o-- Tax : testPeriod


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
